<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".views.CambioClaveFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:gravity="right|center_vertical"
            android:text="@string/cambiar_clave"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clave_nueva"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etClaveNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repetir_clave_nueva" />

        <EditText
            android:id="@+id/etClaveNuevaRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_color" />

        <Button
            android:id="@+id/btnUpdateClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/cambiar_clave"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnCancelarCambioClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/cancelar" />

    </LinearLayout>

</ScrollView>