<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".views.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        tools:layout_editor_absoluteX="-16dp">

        <EditText
            android:id="@+id/etMail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:autofillHints="@string/mail"
            android:textCursorDrawable="@drawable/cursor_color"/>

        <EditText
            android:id="@+id/etClave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/clave"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:autofillHints="@string/clave"
            android:textCursorDrawable="@drawable/cursor_color"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>